# FLAIR_Tract

./: pyproject.toml
model/: data.py  generate.py  modules.py  prep_pt.py  updated_train.py  utils.py
preprocessing/: Snakefile  config.yaml  group_slant.py  preprocessing.sh  process_flair.py  process_flair_config.yaml  pull_prequal.py  rules.md
resources/dataset/: datacode.py
scripts/: cancel_snakefile.sh  convert_tck_trk.py  dipy_slr_recobundles.py  find_valid_training_dirs.py  jobscript.sh  lmax.py  recobundlesx.py  run_dipy_slr_rcb.py  run_flair_processing.sh  run_inference.sh  status.sh  submit_snakefile.sh
