[project]
name = "flair-tractography"
version = "0.1.0"
description = "Flair tractography journal extension implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.8.0",
    "pandas-stubs>=2.3.3.251219",
    "plumbum>=1.10.0",
    "pytorch-graph[full]>=0.2.5",
    "scilpy>=2.2.1",
    "seaborn>=0.13.2",
    "snakemake>=9.13.7",
    "snakemake-storage-plugin-fs>=1.1.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "snakemake-logger-plugin-snkmt>=0.1.5",
    "spython>=0.3.14",
]
